# Detox-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: backfilled-weekly-task.yml
.github/PULL_REQUEST_TEMPLATE/: backfilled-weekly.md
Agent/: .env-example  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
Agent/src/: ai_agent_review_pb2_grpc.py  models.py
Agent/src/ai/: agent.py
Agent/src/api/: main_api.py
Agent/src/grpc/: __init__.py  ai_agent_review_pb2.py  ai_agent_review_pb2_grpc.py  ai_review_server.py  client.py  usage_pb2.py  usage_pb2_grpc.py
Agent/src/proto/: ai_agent_review.proto  usage.proto
DoH/: .env.example  AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
DoH/docs/: README.md  api.md  architecture.md  build.md  configuration.md  filter.md  grpc-proto.md  modules.md
DoH/include/analytics/: analytics_client.hpp  grpc_stream_client.hpp
DoH/include/config/: config.hpp
DoH/include/dns/: dns_forwarder.hpp  dns_upstream.hpp  tcp_upstream.hpp  udp_upstream.hpp
DoH/include/filter/: domain_filter.hpp  redis_domain_filter.hpp
DoH/include/server/: listener.hpp  tls_context.hpp
DoH/include/session/: https_session.hpp
DoH/include/util/: base64url.hpp  dns_wire.hpp  path_parser.hpp
DoH/protos/: analytics.proto
DoH/src/: main.cpp
DoH/src/analytics/: grpc_stream_client.cpp
DoH/src/config/: config.cpp
DoH/src/dns/: dns_forwarder.cpp  tcp_upstream.cpp  udp_upstream.cpp
DoH/src/filter/: redis_domain_filter.cpp
DoH/src/server/: listener.cpp  tls_context.cpp
DoH/src/session/: https_session.cpp
DoH/src/util/: base64url.cpp  dns_wire.cpp  path_parser.cpp
DoH/tests/: dns_wire_test.cpp
deploy/: README.md
deploy/k8s/: agent.yaml  configmap.yaml  frontend.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  redis.yaml  secret.yaml  webserver.yaml
docs/: BACKFILLED_COLLABORATION_LOG.md  OVERVIEW.md  PRD.md  REVIEW-2026-03-integration.md  backend-integration.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: client.js
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  RegisterPage.jsx
scripts/: README.md  local-down.sh  local-status.sh  local-up.sh
webserver/: AGENTS.md  Dockerfile  build.gradle  settings.gradle
webserver/docs/: api.md  features.md  overview.md
webserver/src/main/java/com/pnu/detox_agent/webserver/: DetoxAgentApplication.java
webserver/src/main/java/com/pnu/detox_agent/webserver/analytics/: StatisticsAggregator.java
webserver/src/main/java/com/pnu/detox_agent/webserver/config/: BlocklistCacheWarmup.java  OpenApiConfig.java  SchedulingConfig.java  SecurityConfig.java
webserver/src/main/java/com/pnu/detox_agent/webserver/controller/: AiReviewController.java  AuthController.java  BlocklistController.java  DashboardController.java  GlobalErrorAdvice.java  WebController.java
webserver/src/main/java/com/pnu/detox_agent/webserver/dto/: DomainUsageDto.java  TimelineStatsDto.java  UsageStatsDto.java
webserver/src/main/java/com/pnu/detox_agent/webserver/entity/: BlockedDomainEntity.java  DnsUsageEventEntity.java  DoHEndpointEntity.java  DomainUsageRecord.java  UsageSnapshotEntity.java  UserEntity.java
webserver/src/main/java/com/pnu/detox_agent/webserver/grpc/: DnsAnalyticsGrpcHandler.java
webserver/src/main/java/com/pnu/detox_agent/webserver/repository/: BlockedDomainRepository.java  DnsUsageEventRepository.java  DoHEndpointRepository.java  UsageSnapshotRepository.java  UserRepository.java
webserver/src/main/java/com/pnu/detox_agent/webserver/security/: JwtAuthFilter.java  JwtService.java
webserver/src/main/proto/: ai_agent_review.proto  dns_analytics.proto
webserver/src/main/resources/: application.properties  schema.sql
webserver/src/main/resources/templates/: blocklist.html  dashboard.html  login.html  register.html  review.html
webserver/src/test/java/com/pnu/detox_agent/webserver/: DetoxAgentApplicationTests.java
webserver/src/test/resources/: application.properties
(+18 files in other folders)
